# AV2.1-API

./: .gitignore  .readthedocs.yaml  CHANGELOG_2026-01-02.md  CLAUDE.md  ces_2026_tuesday_itinerary.tex  literature_review_checklist.md  literature_review_checklist.tex  pyproject.toml  requirements.txt  runner.py  runner_dwa.py  runner_dwa_lidar.py
actuators/: __init__.py  serial.py  udp.py
config/: default.yaml
control/: __init__.py  ackermann_vehicle.py  pid.py  pure_pursuit.py
docs/: ASEE_Introduction_Draft.md  ASEE_Zone4_2026_DRIVE.tex  ASEE_Zone4_2026_DRIVE_v3.tex  ASEE_Zone4_2026_Draft.md  ASEE_Zone4_2026_Draft_v2.md  DRIVE_Data_Collection_Checklist.tex  DRIVE_Survey_Instrument.tex  Learning_Roadmap_Humanoid_Robotics.md  Learning_Roadmap_Humanoid_Robotics.tex  Linear_Algebra_Study_Plan.md  conf.py  index.rst  requirements.txt
examples/: ackermann_dwa_costmap_lidar.py  ackermann_dwa_costmap_synthetic.py  ackermann_dwa_synthetic.py  costmap_synthetic.py  dwa_lidar.py  dwa_synthetic.py  ipm_calibration.py  lidar_grid_matplotlib.py  manual_control.py  perception_demo.py  velodyne_decoder_final.py  visualize_bev_lidar.py  yolopv2_demo.py
firmware/: brake.cpp  master.cpp  steer.cpp  throttle.cpp
lab_demo/: README.md  checklist.tex  demo_plan.tex  demo_runner.py  verify_demos.py
perception/: __init__.py  camera_adapter.py  core_types.py  costmap.py  occupancy_grid.py  state.py
perception_test/: YOLOPV2_CPU_FIX.md  __init__.py  check_car_ready.sh  demo_realsense.py  lane_detector.py  live_stream.py  verify_system.py  view_frames.py  visualizer.py
(+127 files in other folders)
